# CodeCamp

./: .gitignore  README.md
AI技能整理/: 2026国内外垂直领域AI应用全景整理.md  AI页面生成效果增强手册.md  huggingface-models.md
ImageLayerAgent/: .env.example  .gitignore  README.md  requirements-optional-paddleocr.txt  requirements-optional-sam2.txt  requirements.txt
ImageLayerAgent/app/: __init__.py  main.py  models.py
ImageLayerAgent/tests/: test_imports.py  test_paddleocr_provider.py
VisionFX/: README.md  app.js  index.html  server.py  setup.ps1  styles.css
canvas-printer/: GETTING_STARTED.md  README.md  index.html  package-lock.json  package.json  test.html  vite.config.js
canvas-printer/docs/: CORE_LOGIC.md  USER_GUIDE.md
canvas-printer/src/: main.js
comic-studio/: .gitignore  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.server.json  vite.config.ts
comic-studio/src/: App.css  api.ts  types.ts
comicFactory/: .npmrc  README.md  README.zh-CN.md  package.json  tsconfig.base.json
comicFactory/docs/: comic-book-business-plan.zh-CN.md
components-idea/: .env.development  .env.production  .gitignore  .prettierignore  .prettierrc.json  README.md  index.html  package-lock.json  package.json  vite.config.js  vite.lib.config.js
electron-vue-print2/: README.md  main.js  package-lock.json  package.json
learn-gitHub-project/: .gitignore
meta-workflow/: ANALYSIS.md
my-code-project/: .npmignore  index.html  jest.config.js  package-lock.json  package.json  readme.md  vite.config.js
pixelforge/: .env.example  .gitignore  README.md  pyproject.toml
pixelforge/examples/: README.md
pixelforge/pixelforge/: __init__.py  __main__.py
pixelforge/pixelforge/agents/: __init__.py  orchestrator.py
pixelforge/pixelforge/api/: __init__.py  main.py
pixelforge/pixelforge/api/routes/: __init__.py  agent.py  analyze.py  projects.py  providers.py  replace.py  segment.py  settings.py
pixelforge/pixelforge/api/static/: __init__.py  index.html  settings.html
pixelforge/pixelforge/cli/: __init__.py  __main__.py
pixelforge/pixelforge/cli/commands/: __init__.py  analyze.py  providers.py  replace.py  segment.py  settings.py
pixelforge/pixelforge/core/: __init__.py  manifest_io.py  models.py  settings.py  storage.py  timing.py
pixelforge/pixelforge/providers/: __init__.py  base.py  registry.py
pixelforge/pixelforge/providers/edit/: __init__.py  custom_http.py  factory.py  minimax_images.py  none.py  openai_images.py
pixelforge/pixelforge/providers/ocr/: __init__.py  paddleocr_cloud.py
pixelforge/pixelforge/providers/parse/: __init__.py  schp_human_parser.py
pixelforge/pixelforge/providers/repair/: __init__.py  factory.py  none.py  opencv_convex_hull.py
pixelforge/pixelforge/providers/segment/: __init__.py  sam_local.py
pixelforge/pixelforge/providers/vision/: __init__.py  openai_vision.py
pixelforge/pixelforge/workflows/: __init__.py  base.py  layer_analysis.py  xiaohua_replacement.py
pixelforge/tests/test_providers/: test_base.py
project-helper/: .gitignore  README.md  build-all.ps1
sam-agent-tool/: .gitignore  LICENSE  README.md  setup.py
sealPrint/: .env.development  .env.production  .env.staging  .prettierrc  index.html  package-lock.json  package.json  vite.config.js
video-pipeline/: .gitignore  .npmrc  README.md  README.zh-CN.md  biome.json  package.json  tsconfig.json
zz-toolbox/: index.html  package-lock.json  package.json  preload.js
旧代码/: index(百度地图标点连续绘制图形).html
(+301 files in other folders)
