[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelforge"
version = "0.1.0"
description = "Pixel-level image understanding + editing workflow engine. Successor to ImageLayerAgent and sam-agent-tool."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "CodeCamp workspace" },
]
keywords = ["image-segmentation", "sam", "paddleocr", "image-editing", "workflow", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
]

# Core dependencies — always installed with the package.
# Heavy ML deps (torch, segment-anything, paddleocr, paddlepaddle) are kept
# OPTIONAL via extras to keep `pip install pixelforge` lightweight.
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pillow>=10.4.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.10.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
# Segment Anything (Meta) — provides auto / point / box segmentation.
# Note: the upstream repo at facebookresearch/segment-anything is the canonical
# source. If pip can't reach GitHub, install manually:
#   pip install git+https://github.com/facebookresearch/segment-anything.git
sam = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
]
# SAM2 (Meta) — newer model with video support; optional refinement provider.
sam2 = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "sam2 @ git+https://github.com/facebookresearch/sam2.git",
]
# PaddleOCR Cloud + the locally-runnable open-source engine.
# paddlepaddle is heavy (~1GB); keep it strictly optional.
paddleocr = [
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.7.0",
]
# Human parser (SCHP / self-correction-human-parsing) — used by parse provider.
schp = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "opencv-python>=4.10.0",
]
# Dev / test / lint tooling.
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",  # for FastAPI TestClient
]

[project.scripts]
# Console-script entry points so `pip install -e .` registers them.
pixelforge = "pixelforge.cli.__main__:main"
pixelforge-web = "pixelforge.api.main:run_server"

[project.urls]
"Homepage" = "https://github.com/local/pixelforge"
"Source" = "https://github.com/local/pixelforge"

[tool.setuptools.packages.find]
include = ["pixelforge*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
"pixelforge.api.static" = ["*.html", "*.js", "*.css", "*.png", "*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]  # line-length is informational, not enforced here

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
